--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -7,18 +7,18 @@
 
     <div class="page-content">
       <div class="wrapper">
-        <div class="work">
+        <div class="experience">
           <h1 class="page-heading">{{ page.title }}</h1>
           {{ content }}
 
           {% for item in page.items %}
-          <div class="work-item">
+          <div class="exp-item">
             <img
               src="{{ item.image.src | absolute_url }}"
               alt="{{ item.image.alt }}"
-              class="work-bubble"
+              class="exp-bubble"
             />
-            <span class="work-text">
+            <span class="exp-text">
               <strong>{{ item.title }}</strong>
               &mdash;
               {{ item.description }}
