--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -7,16 +7,16 @@
 
     <div class="page-content">
       <div class="wrapper">
-        <div class="blog">
+        <div class="publications">
           <h1 class="page-heading">{{ page.title }}</h1>
           {{ content }}
 
-          <p class="blog-post-list">
+          <p class="pub-post-list">
             {% for post in site.posts %}
 
               {% if post.draft != true %}
-                <span class="blog-post-date">{{ post.date | date: "%-m/%-d/%y" }}</span>
-                <a href="{{ post.url | replace:".html","" | prepend: site.baseurl }}" class="blog-post-title">
+                <span class="pub-post-date">{{ post.date | date: "%-m/%-d/%y" }}</span>
+                <a href="{{ post.url | replace:".html","" | prepend: site.baseurl }}" class="pub-post-title">
                   {{ post.title }}
                 </a>
                 <br />
