--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -1,5 +1,5 @@
-.blog-post-list {
-  .blog-post-date {
+.pub-post-list {
+  .pub-post-date {
     width: 6em;
     color: #777;
     display: block;
@@ -14,7 +14,7 @@
     }
   }
 
-  .blog-post-title {
+  .pub-post-title {
     font-size: 100%;
     letter-spacing: normal;
   }
