--- a/_sass/_experiences.scss
+++ b/_sass/_experiences.scss
@@ -1,10 +1,10 @@
-.work-item {
+.exp-item {
   clear: both;
   overflow: hidden;
   padding-bottom: 3em;
 }
 
-.work-bubble {
+.exp-bubble {
   float: left;
   padding-right: 20px;
   width: 100px;
